ie scrollbar fix
В браузере Internet Explorer в макетах <=1280 вертикальные скроллинг
накладывается на элементы страницы

--- a/NetPing_modern/Content/Themes/adaptive.css
+++ b/NetPing_modern/Content/Themes/adaptive.css
@@ -1,4 +1,8 @@
-﻿body{
+﻿@-ms-viewport {
+  width: auto !important;
+}
+
+body{
     min-width: 800px;
 }
 
